--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 services:
   python3:
     restart: always
-    build: ./python/
+    build: ./infra/python/
     container_name: 'python3'
     working_dir: '/root/'
     tty: true
     volumes:
-      - ../backend/:/root
+      - ./backend/:/root
