--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 gspread = "^5.12.2"
 oauth2client = "^4.1.3"
 paramiko = "^3.4.0"
+nltk = "^3.8.1"
+numpy = "^1.26.4"
 
 
 [tool.poetry.group.dev.dependencies]
