--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,10 +60,13 @@
         "hbenl",
         "jebbs",
         "laters",
+        "lemmatize",
+        "Lemmatizer",
         "mechatroner",
         "mgesbert",
         "myzn",
         "njpwerner",
+        "NNPS",
         "oderwat",
         "onetab",
         "onetabs",
@@ -76,9 +79,11 @@
         "rsakey",
         "spotipy",
         "usernamehw",
+        "vocs",
         "vscodevim",
         "Waka",
         "wakatime",
+        "wordnet",
         "yzhang"
     ],
     "plantuml.render": "PlantUMLServer",
