--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "debugpy",
         "eamodio",
         "errorlens",
+        "freqs",
         "fuga",
         "gspread",
         "hbenl",
@@ -80,6 +81,7 @@
         "rsakey",
         "spotipy",
         "usernamehw",
+        "vocabs",
         "vocs",
         "vscodevim",
         "Waka",
