--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,17 +57,22 @@
         "errorlens",
         "freqs",
         "fuga",
+        "funcs",
         "gspread",
         "hbenl",
         "jebbs",
         "laters",
+        "lemmatization",
         "lemmatize",
+        "lemmatized",
         "Lemmatizer",
         "mechatroner",
         "mgesbert",
+        "modelize",
         "myzn",
         "njpwerner",
         "NNPS",
+        "nowns",
         "oderwat",
         "onetab",
         "onetabs",
