--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,7 @@
         "pylint",
         "Qiita",
         "rsakey",
+        "serv",
         "spotipy",
         "usernamehw",
         "vocabs",
