--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,6 @@
 bcrypt==4.1.2 ; python_version >= "3.11" and python_version < "4.0"
+beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "4.0"
+bs4==0.0.2 ; python_version >= "3.11" and python_version < "4.0"
 cachetools==5.3.3 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -27,5 +29,6 @@ requests-oauthlib==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
+soupsieve==2.6 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.66.2 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
