update: refactor, offline mode, utilize

--- a/src/common/config/config.test.ini
+++ b/src/common/config/config.test.ini
@@ -1,5 +1,6 @@
 [APP]
 ENV=DEV
+OFFLINE=FALSE
 
 [LOG]
 NAME = dev
@@ -12,5 +13,5 @@ SPOTIPY_CLIENT_SECRET=
 
 [GSS]
 JSON_PATH=
-SHEET_KEY = 
-SHEET_NAME = 
+SHEET_KEY =
+SHEET_NAME =
