--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "CICD",
         "debugpy",
         "eamodio",
+        "eiken",
         "errorlens",
         "freqs",
         "fuga",
@@ -86,12 +87,14 @@
         "rsakey",
         "serv",
         "spotipy",
+        "toeic",
         "usernamehw",
         "vocabs",
         "vocs",
         "vscodevim",
         "Waka",
         "wakatime",
+        "Weblio",
         "wordnet",
         "yzhang"
     ],
