--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -13,6 +13,7 @@ paramiko = "^3.4.0"
 nltk = "^3.8.1"
 numpy = "^1.26.4"
 bs4 = "^0.0.2"
+tenacity = "^9.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
