--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -30,5 +30,6 @@ requests==2.32.3 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.6 ; python_version >= "3.11" and python_version < "4.0"
+tenacity==9.0.0 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.66.5 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
